Fixed minor error causing bug and stretch case board deformation bugs for run away

--- a/styles/style.css
+++ b/styles/style.css
@@ -106,6 +106,17 @@ button {
   height: 19px;
   width: 19px;
 }
+.tempBox {
+  box-sizing: border-box;
+  position: relative;
+  width: 19px;
+  height: 19px;
+  margin: 0px;
+  display: inline-block;
+  background-color: rgb(0, 0, 0, 0);
+  border-radius: 5px
+  padding: 0px;
+}
 #runAwayText {
   text-align: center;
   font-size: 16px;
